styles/main.css
/* --------------- LAYOUT & GRID RULES ---------------*/

/* Component width is 100% */
.intro,
.blog-list, 
header.container, 
footer.container {
  width: 100%;
}

.intro,
.fblog-list {
  padding: 0;
}

.featured h2,
.blog h3,
.blog p,
.blog a {
  padding: 0rem 3rem;
  margin: 1rem;
}

footer.container {
  padding: 2.5rem;
}

/* --------------- BORDER RULES --------------- */

header,
.intro, 
.website-title,
.featured, .blog {
  border-bottom: 0.2rem solid black;
}

.intro {
  border-top: 0.2rem solid black;
}


/* --------------- NAV RULES ---------------*/

/* Logo size in rem*/
.logo img {
  height: 8rem;
  width: 8rem;
}

.nav {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 80%;
  margin: 0 auto;
}

.nav div {
  margin: 0 1rem;
  padding: 0.2rem 0;
  text-align: center;
}

.logo {
  position: relative;
}

.logo img {
    position: absolute;
    bottom: -3.5rem;
    left: 0;
  }

/* --------------- INTRO RULES ---------------*/

.website-title {
  padding: 3rem;
  vertical-align: bottom;
  background: grey;
  height: 40rem;
}

.website-title h1 {
  padding-top: 25rem;
}

.intro p {
  padding: 3rem;
}


/* --------------- BLOG RULES ---------------*/

.blog {
  display: flex;
  flex-direction: column;
}

.blog-reference {
  display: flex;
  justify-content: center;
  font-size: 4rem;
  background: yellow;
}

.blog-reference p {
  align-self: center;
  padding: 0;
  margin: 0;
}

.blog-summary p,
.blog-summary a {
  display: none;
}

/* --------------- FOOTER RULES ---------------*/

footer {
  height: 8rem;
}


/* --------------- MEDIA QUERIES RULES ---------------*/

@media (min-width: 550px) {

  /* Change order */

  .blog {
    flex-direction: row;
  }

  .blog.even .blog-reference {
    order: 2;
  }

  /* Change nav bar*/

  .nav {
    flex-direction: row;
  }

  .nav div {
    padding: 3rem 0;
  }

  .logo img {
    position: absolute;
    left: 0;
    bottom: -4.2rem;
  }

  /* Add margins*/

  .intro {
    margin-top: 8rem;
  }

  .blog, 
  .intro {
    margin-bottom: 4rem;
  }

  .intro,
  .blog-list {
    width: 80%;
  }

  /* Unhide*/
  .blog-summary p,
  .blog-summary a {
    display: block;
  } 

  /* Change borders*/
  
  .intro, 
  .featured, .blog {
    border: 0.2rem solid black;
  }

  .website-title {
    border-top: none;
    border-bottom: none;
  }

  .featured {
    border: none;
  }

  .blog-reference {
    border-right: 0.2rem solid black;
  }

  .even .blog-reference {
    border-right: 0;
    border-left: 0.2rem solid black;
  }

  footer {
    border-top: 0.2rem solid black;
  }

}

